# acl-2023-miniconf

./: .eslintignore  .gitignore  .prettierignore  CNAME  Makefile  README.md  chat.html  index.html  livestream.html  main.py  map.html  netlify_build.sh  paper_ACL-CODI_1.html  paper_ACL-CODI_2.html  paper_ACL-CODI_3.html  paper_ACL-CODI_4.html  paper_ACL_1.html  paper_ACL_11.html  paper_ACL_12.html  paper_ACL_1282.html  paper_ACL_13.html  paper_ACL_1380.html  paper_ACL_14.html  paper_ACL_1454.html  paper_ACL_15.html  paper_ACL_16.html  paper_ACL_17.html  paper_ACL_18.html  paper_ACL_19.html  paper_ACL_2.html  paper_ACL_21.html  paper_ACL_22.html  paper_ACL_23.html  paper_ACL_24.html  paper_ACL_25.html  paper_ACL_2575.html  paper_ACL_26.html  paper_ACL_27.html  paper_ACL_28.html  paper_ACL_29.html  (+3087 more)
acl_miniconf/: data.py  import_acl2023.py  import_acl2023_workshop_papers.py  import_booklet_acl2023.py  load_site_data.py  site_data.py
configs/: site.yaml
data/: README.md
doc/: deployment_aws.md
miniconf/: load_site_data.py
scripts/: clone_workshops.sh
sitedata/: code_of_conduct.yml  committee.yml  config.yml  demo_papers.csv  faq.yml  main_papers.csv  paper_recs.json  paper_sessions.yml  sponsors.yml  workshops.yml
templates/: about.html  base.html  cal_head.html  components.html  highly_active_chats.html  index.html  livestream.html  map.html  organizers.html  paper.html  papers.html  papers_keyword_vis.html  papers_vis.html  plenary_session.html  plenary_sessions.html  qa_sessions.html  schedule.html  sessions.html  socials.html  sponsor.html  sponsors.html  (+4 more)
(+42 files in other folders)
