[tool.poetry]
name = "acl-miniconf"
version = "0.1.0"
description = ""
authors = ["EntilZha <me@pedro.ai>"]
readme = "README.md"
packages = [{include = "acl_miniconf"}]

[tool.poetry.dependencies]
python = "^3.9"
Flask = "^2.2.3"
Frozen-Flask = "^0.18"
Flask-Markdown = "^0.3"
tqdm = "^4.65.0"
PyYAML = "^6.0"
rich = "^13.3.2"
icalendar = "^5.0.4"
pytz = "^2022.7.1"
jsons = "^1.6.3"
pydantic = "^1.10.6"
hydra-core = "^1.3.2"
pandas = "^2.0.2"
requests = "^2.31.0"
rocketchat-api = "^1.30.0"
typer = "^0.9.0"
openpyxl = "^3.1.2"


[tool.poetry.group.dev.dependencies]
black = "^23.1.0"
pylint = "^2.17.0"
mypy = "^1.1.1"
ipython = "^8.14.0"
ipykernel = "^6.24.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
